'isolation from even-columns &__box, and logo deleted, z-index corrected'

--- a/src/sass/components/_bg-ornament.scss
+++ b/src/sass/components/_bg-ornament.scss
@@ -1,12 +1,6 @@
 @use 'abstracts/variables' as v;
 @use 'abstracts/breakpoints' as b;
 
-.even-columns,
-.even-columns__box,
-.logo{
-	isolation: isolate;
-}
-
 .cta-section::before,
 .bg-ornament__box--top,
 .bg-ornament__box--center-right {
