--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -24,7 +24,7 @@
 	margin-inline: auto;
 	padding-inline: 1.5rem;
 	padding-block: 2.75rem;
-	z-index: -15;
+	z-index: -5;
 	@include b.respond-to('medium') {
 		padding-inline: 1.4375rem;
 	}
